can now read the config file in teh jar